// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aggregate-builds-by-repo 1`] = `
Object {
  "count": 1,
  "indicators": Array [
    Object {
      "name": "Total successful",
      "value": 0,
    },
    Object {
      "name": "Number of executions",
      "value": 1,
    },
    Object {
      "name": "Success rate",
      "value": "0%",
    },
    Object {
      "additionalValue": "1 m",
      "name": "Average duration",
      "value": "1 m",
    },
    Object {
      "additionalValue": "Since Oct 10",
      "name": "Current status",
      "value": "failed",
    },
  ],
  "name": "Builds",
}
`;

exports[`aggregate-builds-by-repo 2`] = `
Object {
  "count": 2,
  "indicators": Array [
    Object {
      "name": "Total successful",
      "value": 1,
    },
    Object {
      "name": "Number of executions",
      "value": 2,
    },
    Object {
      "name": "Success rate",
      "value": "50%",
    },
    Object {
      "additionalValue": "1 m - 2 m",
      "name": "Average duration",
      "value": "2 m",
    },
    Object {
      "additionalValue": undefined,
      "name": "Current status",
      "value": "succeeded",
    },
  ],
  "name": "Builds",
}
`;

exports[`aggregate-builds-by-repo 3`] = `
Object {
  "count": 0,
  "indicators": Array [
    Object {
      "name": "Total successful",
      "value": 0,
    },
    Object {
      "name": "Number of executions",
      "value": 0,
    },
    Object {
      "name": "Success rate",
      "value": "0%",
    },
    Object {
      "additionalValue": "-",
      "name": "Average duration",
      "value": "-",
    },
    Object {
      "additionalValue": undefined,
      "name": "Current status",
      "value": "unknown",
    },
  ],
  "name": "Builds",
}
`;
